--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="img-fill">
                 <div class="text-content">
                   <h6>BATTERIES || INVERTERS || UPS</h6>
-                  <h4>Parameswara Enterprises <br>sit amet, consectetur.</h4>
+                  <h4>Parameswara Enterprises <br>24*7 Service Available</h4>
                   <p>Wanted batteries , Inverters and UPS. Kindly connect our expert Team to understand better ............</p>
                   <a href="contact.html" class="filled-button">Contact Us</a>
                 </div>
