--- a/index.html
+++ b/index.html
@@ -32,6 +32,72 @@
     </div>  
     <!-- ***** Preloader End ***** -->
 
+    <div id="clock">8:10:45</div>   
+
+    <script> 
+
+        setInterval(showTime, 1000); 
+
+        function showTime() { 
+
+            let time = new Date(); 
+
+            let hour = time.getHours(); 
+
+            let min = time.getMinutes(); 
+
+            let sec = time.getSeconds(); 
+
+            am_pm = "AM"; 
+
+  
+
+            if (hour > 12) { 
+
+                hour -= 12; 
+
+                am_pm = "PM"; 
+
+            } 
+
+            if (hour == 0) { 
+
+                hr = 12; 
+
+                am_pm = "AM"; 
+
+            } 
+
+  
+
+            hour = hour < 10 ? "0" + hour : hour; 
+
+            min = min < 10 ? "0" + min : min; 
+
+            sec = sec < 10 ? "0" + sec : sec; 
+
+  
+
+            let currentTime = hour + ":"  
+
+                + min + ":" + sec + am_pm; 
+
+  
+
+            document.getElementById("clock") 
+
+                .innerHTML = currentTime; 
+
+        } 
+
+  
+
+        showTime(); 
+
+    </script> 
+
+    
+    
     <!-- Header -->
     <div class="header">
   <img src="img/logo.png" alt="logo" />
@@ -52,6 +118,22 @@
  
 }
 </style>
+       #clock { 
+
+            font-size: 10px; 
+
+            width: 100px; 
+
+            margin: 1px; 
+
+            text-align: center;  
+
+            border: 2px solid black; 
+
+            border-radius: 10px; 
+
+        } 
+
     <div class="sub-header">
       <div class="container">
         <div class="row">
