--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
    text-align: center;
  
 }
-       #clock { 
+      </style>
+  <style> 
+
+        #clock { 
 
             font-size: 10px; 
 
@@ -132,7 +135,8 @@
             border-radius: 10px; 
 
         } 
-      </style>
+
+    </style> 
 
     <div class="sub-header">
       <div class="container">
