--- a/team.html
+++ b/team.html
@@ -39,15 +39,15 @@
 <style type="text/css">
 .header img {
   float: center;
-  width: 500px;
-  height: 300px;
+  width: 300px;
+  height: 200px;
   color: white;
 }
 
 .header h1 {
   position: relative;
-  top: 18px;
-  left: 10px;
+  top: 25px;
+  left: 20px;
    text-align: center;
  
 }
@@ -132,7 +132,7 @@
             <div class="team-item">
               <img src="img/vijju.jpg" alt="ViJaySinghPadya">
               <div class="down-content">
-                <h4>Shri. Padya ViJay Singh</h4>
+                <h4>Shri. Padya Vijay Singh</h4>
                 <span>Proprietor</span>
                 <p>.............................................</p>
 
