--- a/about.html
+++ b/about.html
@@ -290,5 +290,8 @@
       }
     </script>
 
+<script type="text/javascript">
+  document.addEventListener('contextmenu', event => event.preventDefault());
+</script>
   </body>
 </html>
