--- a/career.html
+++ b/career.html
@@ -236,5 +236,8 @@
       }
     </script>
 
+<script type="text/javascript">
+  document.addEventListener('contextmenu', event => event.preventDefault());
+</script>
   </body>
 </html>
