--- a/contact.html
+++ b/contact.html
@@ -302,5 +302,8 @@
       }
     </script>
 
+<script type="text/javascript">
+  document.addEventListener('contextmenu', event => event.preventDefault());
+</script>
   </body>
 </html>
