--- a/index.html
+++ b/index.html
@@ -341,5 +341,8 @@
       }
     </script>
 
+<script type="text/javascript">
+  document.addEventListener('contextmenu', event => event.preventDefault());
+</script>
   </body>
 </html>
