--- a/team.html
+++ b/team.html
@@ -263,5 +263,8 @@
       }
     </script>
 
+<script type="text/javascript">
+  document.addEventListener('contextmenu', event => event.preventDefault());
+</script>
   </body>
 </html>
