--- a/team.html
+++ b/team.html
@@ -146,11 +146,11 @@
             <div class="team-item">
               <img src="img/chinna.jpg" alt="PremSinghPadya">
               <div class="down-content">
-                <h4>Shri. Prem Singh Padya</h4>
+                <h4>Shri. Amar Singh Padya</h4>
                 <span>Technical Team (Head)</span>
                 <p>..............................................</p>
                 <p>
-                  <a href="https://www.linkedin.com/in/premsinghpadya/"><span><i class="fa fa-linkedin"></i></span></a>
+                  <a href="https://www.linkedin.com/in/amarsinghpadya/"><span><i class="fa fa-linkedin"></i></span></a>
                 </p>
               </div>
             </div>
