--- a/team.html
+++ b/team.html
@@ -144,7 +144,7 @@
           </div>
           <div class="col-md-6">
             <div class="team-item">
-              <img src="img/chinna.jpg" alt="PremSinghPadya">
+              <img src="img/chinna.png" alt="AmarSinghPadya">
               <div class="down-content">
                 <h4>Shri. Amar Singh Padya</h4>
                 <span>Technical Team (Head)</span>
