--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Parameswara Enterprises">
+    <meta name="author" content="Parameswara Enterprises">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>Parameswara Enterprises</title>
@@ -30,7 +30,6 @@
             <div></div>
         </div>
     </div>  
-    <!-- ***** Preloader End ***** -->
 
     <div id="clock">8:10:45</div>   
 
