--- a/career.html
+++ b/career.html
@@ -111,8 +111,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1>No Jobs as of till date</h1>
-            <span>Soon there will be recruitment</span>
+            <h1>We are Hiring</h1>
+            <span>Apply Now</span>
           </div>
         </div>
       </div>
