--- a/career.html
+++ b/career.html
@@ -114,38 +114,45 @@
             <h1>We are Hiring</h1>
             <span>Apply Now</span>
           </div>
+  <h2>Join Our Team as a UPS Service Field Engineer</h2>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Region</th>
+        <th>No. of Positions</th>
+        <th>Apply Now</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>MEDAK</td>
+        <td>1</td>
+        <td><button onclick="openGoogleForm('LINK_TO_YOUR_GOOGLE_FORM')" class="apply-button">Apply Now</button></td>
+      </tr>
+      <tr>
+        <td>YADADRI BHUVANAGIRI</td>
+        <td>1</td>
+        <td><button onclick="openGoogleForm('LINK_TO_YOUR_GOOGLE_FORM')" class="apply-button">Apply Now</button></td>
+      </tr>
+      <tr>
+        <td>NALGONDA</td>
+        <td>1</td>
+        <td><button onclick="openGoogleForm('LINK_TO_YOUR_GOOGLE_FORM')" class="apply-button">Apply Now</button></td>
+      </tr>
+      <tr>
+        <td>HYDERABAD</td>
+        <td>4</td>
+        <td><button onclick="openGoogleForm('LINK_TO_YOUR_GOOGLE_FORM')" class="apply-button">Apply Now</button></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <p>Contact Parameswara Enterprises at <a href="tel:8179977002">8179977002</a> or visit <a href="https://parameswaraenterprises.com">parameswaraenterprises.com</a> for more information.</p>
+
         </div>
       </div>
     </div>
-
-    <br>  
-    <br>  
-    <br>  
-    <br>  
-
-    <br>  
-    <br>  
-    <br>  
-    <br>  
-
-    <br>  
-    <br>  
-    <br>  
-    <br>  
-    <br>  
-    <br>  
-    <br>  
-    <br>  
-
-    <br>  
-    <br>  
-    <br>  
-    <br>  
-
-    <br>  
-    <br>  
-    <br>  
-    <br>  
     <!-- Footer Starts Here -->
     <footer>
 
@@ -239,5 +246,11 @@
 <script type="text/javascript">
   document.addEventListener('contextmenu', event => event.preventDefault());
 </script>
+      <script>
+  function openGoogleForm(formLink) {
+    window.open(formLink, '_blank');
+  }
+</script>
+
   </body>
 </html>
