--- a/career.html
+++ b/career.html
@@ -149,8 +149,8 @@
     </tbody>
   </table>
 
-  <p>Contact Parameswara Enterprises at <a href="tel:8179977002">8179977002</a> or visit <a href="https://parameswaraenterprises.com">parameswaraenterprises.com</a> for more information.</p>
-
+  <p>Contact Parameswara Enterprises at <a href="mailto:parameswaraenterpriseswgl@gmail.com">parameswaraenterpriseswgl@gmail.com</a> or visit <a href="https://parameswaraenterprises.com">parameswaraenterprises.com</a> for more information.</p>
+  <p>"Expect a slight delay in response to your application due to high volume. Thank you for your patience."</p>
         </div>
       </div>
     </div>
