--- a/career.html
+++ b/career.html
@@ -149,7 +149,7 @@
     </tbody>
   </table>
 
-  <p>Contact Parameswara Enterprises at <a href="mailto:parameswaraenterpriseswgl@gmail.com">parameswaraenterpriseswgl@gmail.com</a> or visit <a href="https://parameswaraenterprises.com">parameswaraenterprises.com</a> for more information.</p>
+  <p>Contact Parameswara Enterprises at <a href="mailto:parameswaraenterpriseswgl@gmail.com">parameswaraenterpriseswgl@gmail.com</a> or visit <a href="https://parameswaraenterprises.com">parameswaraenterprises.com</a>.</p>
   <p>"Expect a slight delay in response to your application due to high volume. Thank you for your patience."</p>
         </div>
       </div>
