--- a/career.html
+++ b/career.html
@@ -129,22 +129,22 @@
       <tr>
         <td>MEDAK</td>
         <td>1</td>
-        <td><button onclick="openGoogleForm('LINK_TO_YOUR_GOOGLE_FORM')" class="apply-button">Apply Now</button></td>
+        <td><button onclick="openGoogleForm('https://forms.gle/L1NR5jvHwTtm4ooH7')" class="apply-button">Apply Now</button></td>
       </tr>
       <tr>
         <td>YADADRI BHUVANAGIRI</td>
         <td>1</td>
-        <td><button onclick="openGoogleForm('LINK_TO_YOUR_GOOGLE_FORM')" class="apply-button">Apply Now</button></td>
+        <td><button onclick="openGoogleForm('https://forms.gle/L1NR5jvHwTtm4ooH7')" class="apply-button">Apply Now</button></td>
       </tr>
       <tr>
         <td>NALGONDA</td>
         <td>1</td>
-        <td><button onclick="openGoogleForm('LINK_TO_YOUR_GOOGLE_FORM')" class="apply-button">Apply Now</button></td>
+        <td><button onclick="openGoogleForm('https://forms.gle/L1NR5jvHwTtm4ooH7')" class="apply-button">Apply Now</button></td>
       </tr>
       <tr>
         <td>HYDERABAD</td>
         <td>4</td>
-        <td><button onclick="openGoogleForm('LINK_TO_YOUR_GOOGLE_FORM')" class="apply-button">Apply Now</button></td>
+        <td><button onclick="openGoogleForm('https://forms.gle/L1NR5jvHwTtm4ooH7')" class="apply-button">Apply Now</button></td>
       </tr>
     </tbody>
   </table>
