--- a/about.html
+++ b/about.html
@@ -80,19 +80,17 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home
-                  <span class="sr-only">(current)</span>
-                </a>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="career.html">career</a>
               </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+              <li class="nav-item active">
+              <a class="nav-link" href="about.html">About Us
+                  <span class="sr-only">(current)</span>
+                </a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="team.html">Board Members</a>
               </li>
