--- a/career.html
+++ b/career.html
@@ -247,6 +247,9 @@
     window.open(formLink, '_blank');
   }
 </script>
+      <script type="text/javascript">
+  document.addEventListener('contextmenu', event => event.preventDefault());
+</script>
 
   </body>
 </html>
