--- a/team.html
+++ b/team.html
@@ -144,13 +144,13 @@
           </div>
           <div class="col-md-6">
             <div class="team-item">
-              <img src="img/chinna.png" alt="AmarSinghPadya">
+              <img src="img/chinna.png" alt="PremsinghPadya">
               <div class="down-content">
-                <h4>Shri. Amar Singh Padya</h4>
+                <h4>Shri. Premsingh Padya</h4>
                 <span>Technical Team (Head)</span>
                 <p>..............................................</p>
                 <p>
-                  <a href="https://www.linkedin.com/in/amarsinghpadya/"><span><i class="fa fa-linkedin"></i></span></a>
+                  <a href="https://www.linkedin.com/in/premsinghpadya/"><span><i class="fa fa-linkedin"></i></span></a>
                 </p>
               </div>
             </div>
