--- a/team.html
+++ b/team.html
@@ -144,9 +144,9 @@
           </div>
           <div class="col-md-6">
             <div class="team-item">
-              <img src="img/chinna.png" alt="PremsinghPadya">
+              <img src="img/prem.jpg" alt="PremsinghPadya">
               <div class="down-content">
-                <h4>Shri. Premsingh Padya</h4>
+                <h4>Shri. Prem Singh Padya</h4>
                 <span>Technical Team (Head)</span>
                 <p>..............................................</p>
                 <p>
