--- a/team.html
+++ b/team.html
@@ -131,7 +131,7 @@
           <div class="col-md-6">
             <div class="team-item">
               <div class="down-content">
-              <img src="img/vijju.jpg" alt="ViJaySinghPadya">
+              <img class="images" src="img/vijju.jpg" alt="ViJaySinghPadya">
                 <h4>Shri. Padya Vijay Singh</h4>
                 <span>Proprietor</span>
                 <p>.............................................</p>
@@ -145,7 +145,7 @@
           <div class="col-md-6">
             <div class="team-item">
               <div class="down-content">
-              <img src="img/prem.jpg" alt="PremsinghPadya">
+              <img class="images" src="img/prem.jpg" alt="PremsinghPadya">
                 <h4>Shri. Prem Singh Padya</h4>
                 <span>Technical Team (Head)</span>
                 <p>..............................................</p>
